Simplify if(s) | Correct/add some javadoc | Add try/catch in compiler | Change div.asm to show try/catch example and show how multiple try/catch work | More explicit by purpose empty blocks | Import/export and better filter in ASM editor | Spelling correction/refactor | Replace deprecated | Can choose the rotation axis and able to take a screen shot in FrameView3D | New layout ProportionalHorizontalLayout | Add action/future notion | FalseClass manage all return values (even primitives) | Possibility to add mask on animation | Capacity to serailize/parse objects in/from JSON |